[metadata]
name = mrange
version = 0.1
author = Michael Schilling
author_email = michael@ntropic.de
description = Remove nested for i in range(n) loops to a single line
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ntropic
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

