[metadata]
name = mrange
version = 0.6
author = Michael Schilling
author_email = michael@ntropic.de
description  = mrange is used to remove nested range loops
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ntropic/mrangearchive/refs/tags/v0.6.tar.gz
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

